fix: fix card flex gap

--- a/src/components/cardList/style.scss
+++ b/src/components/cardList/style.scss
@@ -6,6 +6,7 @@
   row-gap: 10px;
   margin: 10px 0;
   padding: 5px 0;
+  justify-content: space-between;
   @media (max-width: $tablet-width) {
     @include columns(32%);
   }
